# prserv

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_python.db
.cargo/: audit.toml
.github/workflows/: checks.yml  pr.yml  release.yml
scripts/: checks.sh
src/: args.rs  buffered_writes.rs  client.rs  config.rs  constants.rs  database.rs  env_vars.rs  error.rs  main.rs  server.rs
src/commands/: client.rs  mod.rs  server.rs
tests/commands/: mod.rs
tests/examples/: prserv.json
